Fix nav-bar overlap issue for small screens

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -342,7 +342,7 @@ body {
 }
 
 .new-svg-container-class svg {
-    width: 100%;
+    width: 80%;
     height: 117vh;
 /*     height: 100%;
        width: 49vw; */
